force-app/main/default/objects/Pokemon__c/Pokemon__c.object-meta.xml
<CustomObject>
    <label>Pokemon</label>
    <nameField>
        <label>Pokemon Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pokemon</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>