force-app/main/default/objects/Pokemon__c/fields/Ataque__c.field-meta.xml
<CustomField>
    <fullName>Ataque__c</fullName>
    <label>Ataque</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>