force-app/main/default/objects/Pokemon__c/fields/Slot1__c.field-meta.xml
<CustomField>
    <fullName>Slot1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Slot1</label>
    <referenceTo>Movimiento__c</referenceTo>
    <relationshipLabel>Pokemon</relationshipLabel>
    <relationshipName>Pokemon</relationshipName>
    <type>Lookup</type>
</CustomField>