force-app/main/default/objects/Pokemon__c/fields/Slot3__c.field-meta.xml
<CustomField>
    <fullName>Slot3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Slot3</label>
    <referenceTo>Movimiento__c</referenceTo>
    <relationshipLabel>Pokemon (Slot3)</relationshipLabel>
    <relationshipName>Pokemon2</relationshipName>
    <type>Lookup</type>
</CustomField>