force-app/main/default/objects/Pokemon__c/fields/Velocidad__c.field-meta.xml
<CustomField>
    <fullName>Velocidad__c</fullName>
    <label>Velocidad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>